--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,13 +21,13 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/player1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/player1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
@@ -101,13 +101,13 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/player2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/player2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
@@ -141,19 +141,41 @@
             </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/table_box"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/dart_table_box"
+                android:id="@+id/table_image"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="#6A3737"
                 android:src="@drawable/unicorn_table" />
-        </LinearLayout>
+
+            <ImageView
+                android:id="@+id/img_dart2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/dart2"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/img_dart3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/dart3"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/img_dart1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/dart1"
+                android:visibility="invisible" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
